# csbind23

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  csbind23.sln
cmake/: Csbind23BindingE2E.cmake  Csbind23Managed.cmake
example/: CMakeLists.txt  bindings_declarations.cpp  bindings_declarations.hpp  generator_main.cpp
example/csharp/: main.cs  managed_converters.cs  playground.generated.csproj  playground.runner.csproj
include/csbind23/: bindings_generator.hpp  core_runtime.hpp  ir.hpp  std.hpp  text_writer.hpp  type_utils.hpp
include/csbind23/cabi/: converter.hpp
include/csbind23/detail/: callable_traits.hpp  converter_internal.hpp  temporary_memory_allocator.hpp
include/csbind23/emit/: cabi_emitter.hpp  csharp_emitter.hpp  csharp_naming.hpp
include/csbind23/std/: detail.hpp  functional.hpp  map.hpp  string.hpp  string_view.hpp  vector.hpp
src/: CMakeLists.txt  bindings_generator.cpp  temporary_memory_allocator.cpp
src/cs/: csbind23.array.g.cs  csbind23.callbacks.g.cs  csbind23.instance_cache.g.cs  csbind23.marshalling.g.cs  csbind23.memory.g.cs  csbind23.ownership.g.cs  csbind23.runtime.g.cs  csbind23.types.g.cs  csbind23_stl.StringView.g.cs
src/cs_partial/: csbind23_stl.Map.partial.cs  csbind23_stl.String.partial.cs  csbind23_stl.UnorderedMap.partial.cs  csbind23_stl.Vector.partial.cs
src/emit/: cabi_emitter.cpp  cabi_emitter_utils.cpp  cabi_emitter_utils.hpp  csharp_emitter.cpp  csharp_emitter_text_utils.cpp  csharp_emitter_text_utils.hpp  csharp_naming.cpp  emitter_ir_utils.cpp  emitter_ir_utils.hpp  generic_dispatch_utils.cpp  generic_dispatch_utils.hpp
tests/: CMakeLists.txt  StringViewTestUtils.cs  bindings_generator_tests.cpp  e2e.tests.csproj  main_generator.cpp  string_converter_tests.cpp
tests/basic/: test_array.cs  test_array.hpp  test_basic.cs  test_basic.hpp  test_basic_generic.cs  test_basic_generic.hpp  test_custom_marshaller.cs  test_custom_marshaller.hpp  test_custom_struct_vec2.cs  test_custom_struct_vec2.hpp  test_default_args.cs  test_default_args.hpp  test_enum.cs  test_enum.hpp  test_function_pointer.cs  test_function_pointer.hpp  test_naming.cs  test_naming.hpp  test_properties.cs  test_properties.hpp  test_same_managed_type.cs  test_same_managed_type.hpp
tests/class/: test_class.cs  test_class.hpp  test_class_generic.cs  test_class_generic.hpp  test_inheritance.cs  test_inheritance.hpp  test_instance_cache.cs  test_instance_cache.hpp  test_module_import.cs  test_module_import.hpp  test_multi_inheritance.cs  test_multi_inheritance.hpp  test_polymorphism.cs  test_polymorphism.hpp  test_virtual.cs  test_virtual.hpp
tests/e2e/: CMakeLists.txt  counter.cs  counter.hpp  e2e.cs  e2e.hpp  e2e.tests.csproj  string.cs  string.hpp
tests/stl/: test_array.cs  test_array.hpp  test_functional.cs  test_functional.hpp  test_map.cs  test_map.hpp  test_string.cs  test_string.hpp  test_vector.cs  test_vector.hpp
tests/support/: binding_e2e_generator_main.cpp
